--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
         
         <div class="meaning">
-            "Di antara banyak yang bisa hilang, ada satu yang minta tetap diingat—forget me not."
+            "Di antara banyak yang bisa hilang, ada satu yang minta tetap diingat, dan didalam cinta itu matilah segala penjelasan—forget me not."
         </div>
     </div>
     
