--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         
         <div class="mb-8">
             <a href="flower.html" class="inline-block bg-gradient-to-r from-forgetmenot-500 to-lavender-500 hover:from-forgetmenot-600 hover:to-lavender-600 text-white font-medium tracking-wide py-3 md:py-4 px-8 md:px-10 rounded-full transition-all duration-300 shadow-lg shadow-forgetmenot-200 hover:shadow-xl hover:shadow-forgetmenot-300 hover:-translate-y-1 active:translate-y-0">
-                Buka Pesan
+                Open
             </a>
         </div>
         
